@@ -1818,3 +1818,5 @@ emoji,hexcode,openmoji_tags,openmoji_author,openmoji_date
 😶‍🌫️,1F636-200D-1F32B-FE0F,,Nelly Nieter,2021-04-23
 ❤️‍🔥,2764-FE0F-200D-1F525,,Nelly Nieter,2021-04-23
 ❤️‍🩹,2764-FE0F-200D-1FA79,,Nelly Nieter,2021-04-23
+🧔‍♀️,1F9D4-200D-2640-FE0F,,Nelly Nieter,2021-04-26
+🧔‍♂️,1F9D4-200D-2642-FE0F,,Nelly Nieter,2021-04-26
