@@ -1,6 +1,4 @@
 emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,openmoji_date,skintone,skintone_combination,skintone_base_emoji,skintone_base_hexcode,unicode,order
-🧔‍♂️,1F9D4-200D-2642-FE0F,people-body,person,man: beard,"beard, man",,,,,single,🧔‍♂️,1F9D4-200D-2642-FE0F,13.1,470
-🧔‍♀️,1F9D4-200D-2640-FE0F,people-body,person,woman: beard,"beard, woman",,,,,single,🧔‍♀️,1F9D4-200D-2640-FE0F,13.1,482
 🇦,1F1E6,,,regional indicator A,,,,,,,,,0,
 🇧,1F1E7,,,regional indicator B,,,,,,,,,0,
 🇨,1F1E8,,,regional indicator C,,,,,,,,,0,
