@@ -449,6 +449,18 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 🧔🏽,1F9D4-1F3FD,people-body,person,"person: medium skin tone, beard",,,Lisa Thiel,2018-04-18,3,single,🧔,1F9D4,5,467
 🧔🏾,1F9D4-1F3FE,people-body,person,"person: medium-dark skin tone, beard",,,Lisa Thiel,2018-04-18,4,single,🧔,1F9D4,5,468
 🧔🏿,1F9D4-1F3FF,people-body,person,"person: dark skin tone, beard",,,Lisa Thiel,2018-04-18,5,single,🧔,1F9D4,5,469
+🧔‍♂️,1F9D4-200D-2642-FE0F,people-body,person,man: beard,"beard, man",,Nelly Nieter,2021-04-26,,single,🧔‍♂️,1F9D4-200D-2642-FE0F,13.1,470
+🧔🏻‍♂️,1F9D4-1F3FB-200D-2642-FE0F,people-body,person,"man: light skin tone, beard",,,Nelly Nieter,2021-04-26,1,single,🧔‍♂️,1F9D4-200D-2642-FE0F,13.1,472
+🧔🏼‍♂️,1F9D4-1F3FC-200D-2642-FE0F,people-body,person,"man: medium-light skin tone, beard",,,Nelly Nieter,2021-04-26,2,single,🧔‍♂️,1F9D4-200D-2642-FE0F,13.1,474
+🧔🏽‍♂️,1F9D4-1F3FD-200D-2642-FE0F,people-body,person,"man: medium skin tone, beard",,,Nelly Nieter,2021-04-26,3,single,🧔‍♂️,1F9D4-200D-2642-FE0F,13.1,476
+🧔🏾‍♂️,1F9D4-1F3FE-200D-2642-FE0F,people-body,person,"man: medium-dark skin tone, beard",,,Nelly Nieter,2021-04-26,4,single,🧔‍♂️,1F9D4-200D-2642-FE0F,13.1,478
+🧔🏿‍♂️,1F9D4-1F3FF-200D-2642-FE0F,people-body,person,"man: dark skin tone, beard",,,Nelly Nieter,2021-04-26,5,single,🧔‍♂️,1F9D4-200D-2642-FE0F,13.1,480
+🧔‍♀️,1F9D4-200D-2640-FE0F,people-body,person,woman: beard,"beard, woman",,Nelly Nieter,2021-04-26,,single,🧔‍♀️,1F9D4-200D-2640-FE0F,13.1,482
+🧔🏻‍♀️,1F9D4-1F3FB-200D-2640-FE0F,people-body,person,"woman: light skin tone, beard",,,Nelly Nieter,2021-04-26,1,single,🧔‍♀️,1F9D4-200D-2640-FE0F,13.1,484
+🧔🏼‍♀️,1F9D4-1F3FC-200D-2640-FE0F,people-body,person,"woman: medium-light skin tone, beard",,,Nelly Nieter,2021-04-26,2,single,🧔‍♀️,1F9D4-200D-2640-FE0F,13.1,486
+🧔🏽‍♀️,1F9D4-1F3FD-200D-2640-FE0F,people-body,person,"woman: medium skin tone, beard",,,Nelly Nieter,2021-04-26,3,single,🧔‍♀️,1F9D4-200D-2640-FE0F,13.1,488
+🧔🏾‍♀️,1F9D4-1F3FE-200D-2640-FE0F,people-body,person,"woman: medium-dark skin tone, beard",,,Nelly Nieter,2021-04-26,4,single,🧔‍♀️,1F9D4-200D-2640-FE0F,13.1,490
+🧔🏿‍♀️,1F9D4-1F3FF-200D-2640-FE0F,people-body,person,"woman: dark skin tone, beard",,,Nelly Nieter,2021-04-26,5,single,🧔‍♀️,1F9D4-200D-2640-FE0F,13.1,492
 👨‍🦰,1F468-200D-1F9B0,people-body,person,man: red hair,"adult, man, red hair",,Nadine Bartel,2019-05-06,,single,👨‍🦰,1F468-200D-1F9B0,11,494
 👨🏻‍🦰,1F468-1F3FB-200D-1F9B0,people-body,person,"man: light skin tone, red hair",,,Nadine Bartel,2019-05-06,1,single,👨‍🦰,1F468-200D-1F9B0,11,495
 👨🏼‍🦰,1F468-1F3FC-200D-1F9B0,people-body,person,"man: medium-light skin tone, red hair",,,Nadine Bartel,2019-05-06,2,single,👨‍🦰,1F468-200D-1F9B0,11,496
