@@ -7650,6 +7650,210 @@
     "order": 469
   },
   {
+    "emoji": "🧔‍♂️",
+    "hexcode": "1F9D4-200D-2642-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "man: beard",
+    "tags": "beard, man",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": "",
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♂️",
+    "skintone_base_hexcode": "1F9D4-200D-2642-FE0F",
+    "unicode": 13.1,
+    "order": 470
+  },
+  {
+    "emoji": "🧔🏻‍♂️",
+    "hexcode": "1F9D4-1F3FB-200D-2642-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "man: light skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 1,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♂️",
+    "skintone_base_hexcode": "1F9D4-200D-2642-FE0F",
+    "unicode": 13.1,
+    "order": 472
+  },
+  {
+    "emoji": "🧔🏼‍♂️",
+    "hexcode": "1F9D4-1F3FC-200D-2642-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "man: medium-light skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 2,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♂️",
+    "skintone_base_hexcode": "1F9D4-200D-2642-FE0F",
+    "unicode": 13.1,
+    "order": 474
+  },
+  {
+    "emoji": "🧔🏽‍♂️",
+    "hexcode": "1F9D4-1F3FD-200D-2642-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "man: medium skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 3,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♂️",
+    "skintone_base_hexcode": "1F9D4-200D-2642-FE0F",
+    "unicode": 13.1,
+    "order": 476
+  },
+  {
+    "emoji": "🧔🏾‍♂️",
+    "hexcode": "1F9D4-1F3FE-200D-2642-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "man: medium-dark skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 4,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♂️",
+    "skintone_base_hexcode": "1F9D4-200D-2642-FE0F",
+    "unicode": 13.1,
+    "order": 478
+  },
+  {
+    "emoji": "🧔🏿‍♂️",
+    "hexcode": "1F9D4-1F3FF-200D-2642-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "man: dark skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 5,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♂️",
+    "skintone_base_hexcode": "1F9D4-200D-2642-FE0F",
+    "unicode": 13.1,
+    "order": 480
+  },
+  {
+    "emoji": "🧔‍♀️",
+    "hexcode": "1F9D4-200D-2640-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "woman: beard",
+    "tags": "beard, woman",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": "",
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♀️",
+    "skintone_base_hexcode": "1F9D4-200D-2640-FE0F",
+    "unicode": 13.1,
+    "order": 482
+  },
+  {
+    "emoji": "🧔🏻‍♀️",
+    "hexcode": "1F9D4-1F3FB-200D-2640-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "woman: light skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 1,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♀️",
+    "skintone_base_hexcode": "1F9D4-200D-2640-FE0F",
+    "unicode": 13.1,
+    "order": 484
+  },
+  {
+    "emoji": "🧔🏼‍♀️",
+    "hexcode": "1F9D4-1F3FC-200D-2640-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "woman: medium-light skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 2,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♀️",
+    "skintone_base_hexcode": "1F9D4-200D-2640-FE0F",
+    "unicode": 13.1,
+    "order": 486
+  },
+  {
+    "emoji": "🧔🏽‍♀️",
+    "hexcode": "1F9D4-1F3FD-200D-2640-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "woman: medium skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 3,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♀️",
+    "skintone_base_hexcode": "1F9D4-200D-2640-FE0F",
+    "unicode": 13.1,
+    "order": 488
+  },
+  {
+    "emoji": "🧔🏾‍♀️",
+    "hexcode": "1F9D4-1F3FE-200D-2640-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "woman: medium-dark skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 4,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♀️",
+    "skintone_base_hexcode": "1F9D4-200D-2640-FE0F",
+    "unicode": 13.1,
+    "order": 490
+  },
+  {
+    "emoji": "🧔🏿‍♀️",
+    "hexcode": "1F9D4-1F3FF-200D-2640-FE0F",
+    "group": "people-body",
+    "subgroups": "person",
+    "annotation": "woman: dark skin tone, beard",
+    "tags": "",
+    "openmoji_tags": "",
+    "openmoji_author": "Nelly Nieter",
+    "openmoji_date": "2021-04-26",
+    "skintone": 5,
+    "skintone_combination": "single",
+    "skintone_base_emoji": "🧔‍♀️",
+    "skintone_base_hexcode": "1F9D4-200D-2640-FE0F",
+    "unicode": 13.1,
+    "order": 492
+  },
+  {
     "emoji": "👨‍🦰",
     "hexcode": "1F468-200D-1F9B0",
     "group": "people-body",
